# cyrus-sasl

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  README.andrew  SMakefile  TODO  acconfig.h  configure.in
build-windows/: .gitignore
build-windows/cyrus-sasl/: cyrus-sasl.sln
build-windows/cyrus-sasl/cyrus-sasl/: cyrus-sasl.vcxproj  cyrus-sasl.vcxproj.filters
build-windows/include/: config.h
config/: Info.plist  gssapi.m4  kerberos_v4.m4  mkinstalldirs  sasldb.m4
doc/: Makefile.am  appconvert.html  gssapi.html  index.html  macosx.html  options.html  plugprog.html  programming.html  sysadmin.html
include/: Makefile.am  gai.h  prop.h  sasl.h  saslplug.h
java/CyrusSasl/: Makefile.am  javasasl.c
lib/: Makefile.am  auxprop.c  canonusr.c  checkpw.c  client.c  common.c  config.c  db_berkeley.c  db_gdbm.c  db_ndbm.c  db_none.c  db_testw32.c  dlopen.c  external.c  getaddrinfo.c  getnameinfo.c  makedbm.c  saslint.h  saslutil.c  server.c  seterror.c  staticopen.c  staticopen.h  test.c  windlopen.c
mac/CommonKClient/mac_kclient/: kcglue_des.c  kcglue_des.h  kcglue_krb.c  kcglue_krb.h  mac_krb_lib1.c
mac/CommonKClient/mac_kclient3/: kcglue_des.c  kcglue_des.h  kcglue_krb.c  kcglue_krb.h  mac_krb_lib1.c
mac/CommonKClient/mac_kclient3/Headers/CredentialsCache/: CredentialsCache.h
mac/CommonKClient/mac_kclient3/Headers/GSS/: gssapi.h
mac/CommonKClient/mac_kclient3/Headers/KClient/: KClient.h
mac/CommonKClient/mac_kclient3/Headers/KClientCompat/: KClientCompat.h
mac/CommonKClient/mac_kclient3/Headers/KClientDeprecated/: KClientDeprecated.h
mac/CommonKClient/mac_kclient3/Headers/Kerberos/: Kerberos.h
mac/CommonKClient/mac_kclient3/Headers/KerberosLogin/: KerberosLogin.h
mac/CommonKClient/mac_kclient3/Headers/KerberosManager/: KerberosManagerLib.h
mac/CommonKClient/mac_kclient3/Headers/KerberosPreferences/: KerberosPreferences.h
mac/CommonKClient/mac_kclient3/Headers/KerberosSupport/: ErrorLib.h  ErrorList.r  Idle.h  SocketErrors.h  Sockets.h  Utilities.h  hesiod.h  netdb.h  pwd.h
mac/CommonKClient/mac_kclient3/Headers/TicketKeeper/: TicketKeeper.h
mac/include/: config.h
mac/kerberos_includes/: conf.h  klog.h  kparse.h  krb-protos.h  krb.h  krb_conf.h  lsb_addr_comp.h  old_krb.h  osconf.h  prot.h
mac/kerberos_includes/kerberos/: des.h.unix
mac/krb4_sources/: krb-archaeology.h  krb-protos.h  krb.h  lsb_addr_comp.c  mk_auth.c  mk_priv.c  mk_req.c  mk_safe.c  rd_priv.c  rd_safe.c  rw.c
mac/libdes/src/: Makefile.am  Makefile.in  dllmain.c  md4.c  md4.h  md5.c  md5.h  mdtest.c  passwd_dlg.c  passwd_dlg.h  rnd_keys.c  sha.c  sha.h  supp.c
mac/mac_lib/: getopt.c  mac_dyn_dlopen.c  mac_monolithic_dlopen.c  parse_cmd_line.c  xxx_client_mac_lib.c  xxx_mac_lib.c  yyy_mac_lib.c
mac/osx_cfm_glue/: cfmglue.c
man/: Makefile.am  sasl.3  sasl_authorize_t.3  sasl_auxprop.3  sasl_callbacks.3  sasl_chalprompt_t.3  sasl_checkpass.3  sasl_client_init.3  sasl_client_new.3  sasl_client_start.3  sasl_client_step.3  sasl_decode.3  sasl_dispose.3  sasl_done.3  sasl_encodev.3  sasl_errors.3  sasl_errstring.3  sasl_getopt_t.3  sasl_getpath_t.3  sasl_getprop.3  sasl_getrealm_t.3  sasl_getsecret_t.3  sasl_getsimple_t.3  sasl_idle.3  sasl_listmech.3  sasl_log_t.3  sasl_server_init.3  sasl_server_new.3  sasl_server_start.3  sasl_server_step.3  sasl_setprop.3  sasl_verifyfile_t.3
plugins/: Makefile.am  anonymous.c  cram.c  digestmd5.c  gssapi.c  kerberos4.c  login.c  makeinit.sh  ntlm.c  otp.c  plain.c  plugin_common.c  plugin_common.h  sasldb.c  scram.c  srp.c
pwcheck/: pwcheck.c
sample/: .cvsignore  Makefile.am  client.c  common.c  common.h  sample-client.c  sample-server.c  server.c
sasl/: Makefile.am  javasasl.c
saslauthd/: Makefile.am  acconfig.h  auth_dce.c  auth_getpwent.c  auth_krb4.c  auth_krb5.c  auth_pam.c  auth_rimap.c  auth_shadow.c  auth_sia.c  configure.in  mechanisms.c  mechanisms.h  saslauthd.c  saslauthd.mdoc
saslauthd/config/: mkinstalldirs
sasldb/: Makefile.am  allockey.c  db_berkeley.c  db_gdbm.c  db_ndbm.c  db_none.c  db_testw32.c  sasldb.h
utils/: .cvsignore  Makefile.am  dbconverter-2.c  sasldblistusers.8  sasldblistusers.c  saslpasswd.c  sfsasl.c  smtptest.c  testsuite.c
win32/include/: config.h
